Fix name alignment to center on About Me title

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ p.contact-text {
   .photo-container > .name {
     margin: 0;
     bottom: 42vw;
-    left: 42vw;
+    left: 44vw;
     text-align: right;
     font-size: 7.5vw;
     text-wrap: nowrap;
